--- a/paper-fab-menu.html
+++ b/paper-fab-menu.html
@@ -7,9 +7,8 @@
     Code distributed by Google as part of the polymer project is also
     subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../core-icons/core-icons.html">
-<link rel="import" href="../core-overlay/core-overlay.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
+<link rel="import" href="../iron-overlay-behavior/iron-overlay-behavior.html">
 <link rel="import" href="../paper-fab/paper-fab.html">
 
 <link rel="import" href="paper-fab-menu-item.html">
@@ -32,10 +31,24 @@
 @homepage http://cwdoh.github.io/paper-fab-menu
 -->
 
-<polymer-element name="paper-fab-menu" attributes="icon closeIcon duration zIndex overlay">
-  <template>
-    <link rel="stylesheet" href="paper-fab-menu.css">
-    <style>
+  <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+<dom-module id="paper-fab-menu">
+  <style>
+    /* TODO(polyup): For speed, consider reworking these styles with .classes
+                     and #ids rather than [attributes].
+    */
+    [layout] {
+      @apply(--layout);
+    }
+    [layout][vertical] {
+      @apply(--layout-vertical);
+    }
+    [layout][center] {
+      @apply(--layout-center);
+    }
+  </style>
+  <link rel="import" type="css" href="paper-fab-menu.css">
+  <style>
       polyfill-next-selector { content: 'paper-fab-menu #fam paper-fab-menu-item'; }
       #fam content[select="paper-fab-menu-item"]::content * {
         transition: opacity {{duration}}s, transform {{duration}}s, -moz-transform {{duration}}s, -webkit-transform {{duration}}s;
@@ -63,112 +76,140 @@
         -webkit-transform: translate3d(0, 100%, 0);
       }
     </style>
+  <template>
 
-    <template repeat="{{items}}">
+    <!--
+        TODO(polyup): convert bindings inside this dom-repeat instance below
+        from {{foo}} to {{item.foo}}
+     -->
+    <template is="dom-repeat" items="{{items}}">
       <style>
-        polyfill-next-selector { content: 'paper-fab-menu #fam paper-fab-menu-item:nth-child({{index}})'; }
-        #fam content[select="paper-fab-menu-item"]::content *:nth-child({{index}}) {
-          transition-delay: {{delay.appear}}s;
+        polyfill-next-selector { content: 'paper-fab-menu #fam paper-fab-menu-item:nth-child(<span>{{item.index}}</span>)'; }
+        #fam content[select="paper-fab-menu-item"]::content *:nth-child(<span>{{item.index}}</span>) {
+          transition-delay: <span>{{item.delay.appear}}</span>s;
         }
 
-        polyfill-next-selector { content: 'paper-fab-menu #fam.show paper-fab-menu-item:nth-child({{index}})'; }
-        #fam.show content[select="paper-fab-menu-item"]::content *:nth-child({{index}}) {
-          transition-delay: {{delay.disappear}}s;
+        polyfill-next-selector { content: 'paper-fab-menu #fam.show paper-fab-menu-item:nth-child(<span>{{item.index}}</span>)'; }
+        #fam.show content[select="paper-fab-menu-item"]::content *:nth-child(<span>{{item.index}}</span>) {
+          transition-delay: <span>{{item.delay.disappear}}</span>s;
         }
       </style>
     </template>
 
-	<template if="{{overlay}}">
-		<core-overlay id="overlay" layered backdrop transition="core-transition-fade" on-core-overlay-open="{{overlayOpenedChanged}}"></core-overlay>
-	</template>
-    <div layout vertical center class="container" id="fam">
-      <div layout vertical center style="position: absolute; overflow: visible; left:0; right: 0;">
-        <div layout vertical center class="item-container" style="position: absolute; bottom: 0;">
+  <template is="dom-if" if="{{overlay}}">
+    <iron-overlay-behavior id="overlay" layered="" backdrop="" transition="core-transition-fade" on-core-overlay-open="overlayOpenedChanged"></iron-overlay-behavior>
+  </template>
+    <div layout="" vertical="" center="" class="container" id="fam">
+      <div layout="" vertical="" center="" style="position: absolute; overflow: visible; left:0; right: 0;">
+        <div layout="" vertical="" center="" class="item-container" style="position: absolute; bottom: 0;">
           <content id="content" select="paper-fab-menu-item"></content>
         </div>
       </div>
-      <paper-fab icon="menu" id="trigger" on-click="{{toggle}}"></paper-fab>
+      <paper-fab icon="menu" id="trigger" on-click="toggle"></paper-fab>
     </div>
 
   </template>
-
   <script>
     Polymer({
-      /**
-      * Set opened to true to show the floating menu and to false to hide it.
-      *
-      * @attribute opened
-      * @type boolean
-      * @default false
-      */
-      opened: false,
-
-      /**
-      * Automactically set delay to each item. This will be deprecated at later version.
-      *
-      * @attribute items
-      * @type Array
-      * @default []
-      */
-      items: [],
-
-      /**
-      * Set the default icon of main button to show floating menu
-      *
-      * @attribute icon
-      * @type String
-      * @default 'menu'
-      */
-      icon: 'menu',
-
-      /**
-      * Set the icon of main button to close floating menu
-      *
-      * @attribute closeIcon
-      * @type String
-      * @default 'close'
-      */
-      closeIcon: 'close',
-
-      /**
-      * Set duration of total animation to show/hide menu. This will be seed value to determine delay and duration of each menu item.
-      *
-      * @attribute duration
-      * @type Float
-      * @default 0.3
-      */
-      duration: 0.3,
-
-      /**
-      * Set z-index of container to contain whole parts of menu. This will be depth to determine z-orders of elements including paper-fab-menu.
-      *
-      * @attribute zIndex
-      * @type Integer
-      * @default 10000
-      */
-      zIndex: 10000,
-	  
-      /**
-      * Set if the overlay of screen should be used when the menu is opened.
-      * @attribute overlay
-      * @type boolean
-      * @default true
-      */
-      overlay: true,
-
-      ready: function() {
+      is: 'paper-fab-menu',
+      properties: {
+        /**
+        * Set the icon of main button to close floating menu
+        *
+        * @attribute closeIcon
+        * @type String
+        * @default 'close'
+        */
+        closeIcon: {
+          type: String,
+          value: 'close',
+          notify: true
+        },
+        /**
+        * Set duration of total animation to show/hide menu. This will be seed value to determine delay and duration of each menu item.
+        *
+        * @attribute duration
+        * @type Float
+        * @default 0.3
+        */
+        duration: {
+          type: Number,
+          value: 0.3,
+          notify: true,
+          observer: 'durationChanged'
+        },
+        /**
+        * Set the default icon of main button to show floating menu
+        *
+        * @attribute icon
+        * @type String
+        * @default 'menu'
+        */
+        icon: {
+          type: String,
+          value: 'menu',
+          notify: true
+        },
+        /**
+        * Automactically set delay to each item. This will be deprecated at later version.
+        *
+        * @attribute items
+        * @type Array
+        * @default []
+        */
+        items: {
+          type: Array,
+          value: function () {
+            return [];
+          }
+        },
+        /**
+        * Set opened to true to show the floating menu and to false to hide it.
+        *
+        * @attribute opened
+        * @type boolean
+        * @default false
+        */
+        opened: {
+          type: Boolean,
+          value: false,
+          observer: 'openedChanged'
+        },
+        /**
+        * Set if the overlay of screen should be used when the menu is opened.
+        * @attribute overlay
+        * @type boolean
+        * @default
+        */
+        overlay: {
+          type: Boolean,
+          value: false,
+          notify: true
+        },
+        overlayOpened: { observer: 'overlayOpenedChanged' },
+        /**
+        * Set z-index of container to contain whole parts of menu. This will be depth to determine z-orders of elements including paper-fab-menu.
+        *
+        * @attribute zIndex
+        * @type Integer
+        * @default 10000
+        */
+        zIndex: {
+          type: Number,
+          value: 10000,
+          notify: true
+        }
+      },
+      ready: function () {
         this.calculateTransitionEffects.apply(this);
-
         // set default icon
         this.$.trigger.icon = this.icon;
       },
-
-      overlayOpenedChanged: function() {
-        if(this.overlay) {
+      overlayOpenedChanged: function () {
+        if (this.overlay) {
           this.opened = this.$.overlay.opened;
         }
       },
-
       /**
        * The `paper-fab-menu-open` event is fired whenever menu
        * is opened or closed.
@@ -176,27 +217,21 @@
        * @event paper-fab-menu-open
        * @param {Object} detail
        */
-
-      openedChanged: function() {
+      openedChanged: function () {
         this.update();
         this.fire('paper-fab-menu-open', this.opened);
-
         // workaround for multiple backdrops when closing fab-menu.
         if (!this.opened) {
           var backdrops = document.querySelectorAll('html div.core-overlay-backdrop');
-
           if (backdrops.length <= 1)
             return;
-
-          if(this.overlay) {
+          if (this.overlay) {
             for (l in backdrops) {
               if (backdrops[l] != this.$.overlay.scrim) {
                 // add core-opened to other backdrop for workaround
-                backdrops[l].classList.add('core-opened')
-
+                backdrops[l].classList.add('core-opened');
                 // remove overlay of fab-menu.
                 this.$.overlay.scrim.remove();
-
                 // just do this at first backdrop.
                 return;
               }
@@ -204,62 +239,54 @@
           }
         }
       },
-
       /**
        * The `toggle` method will toggle the state of menu.
        *
        * @method toggle
        */
-      toggle: function() {
+      toggle: function () {
         this.opened = !this.opened;
       },
-
       /**
        * The `open` method will show the menu.
        *
        * @method open
        */
-      open: function() {
+      open: function () {
         this.opened = true;
         this.$.trigger.icon = this.closeIcon;
-        this.$.trigger.setAttribute("activate", "");
-		
-        if(this.overlay) {
+        this.$.trigger.setAttribute('activate', '');
+        if (this.overlay) {
           this.$.overlay.open();
         }
       },
-
       /**
        * The `close` method will hide the menu.
        *
        * @method close
        */
-      close: function() {
+      close: function () {
         this.opened = false;
         this.$.trigger.icon = this.icon;
-        this.$.trigger.removeAttribute("activate");
-
-    		if(this.overlay) {
-    			this.$.overlay.close();
-    		}
+        this.$.trigger.removeAttribute('activate');
+        if (this.overlay) {
+          this.$.overlay.close();
+        }
       },
-
-      update: function() {
+      update: function () {
         this.$.fam.classList.toggle('show', this.opened);
-        this[this.opened? 'open':'close']();
+        this[this.opened ? 'open' : 'close']();
       },
-
-      durationChanged: function() {
+      durationChanged: function () {
         this.calculateTransitionEffects.apply(this);
       },
-
-      calculateTransitionEffects: function() {
+      calculateTransitionEffects: function () {
         // this should calculates delays of menu items and updates them into css.
         var length = this.$.content.getDistributedNodes().length;
         var duration = parseFloat(this.duration);
         var delta = this.duration / length;
         this.items = [];
-        for (var index = 1 ; index <= length ; index ++) {
+        for (var index = 1; index <= length; index++) {
           var factor = delta * index;
           this.items.push({
             index: index,
@@ -272,4 +299,4 @@
       }
     });
   </script>
-</polymer-element>
+</dom-module>
