--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <script src="../webcomponentsjs/webcomponents.min.js"></script>
-  <link rel="import" href="../core-component-page/core-component-page.html">
+  <link rel="import" href="../iron-component-page/iron-component-page.html">
 
 </head>
 <body unresolved>
 
-  <core-component-page></core-component-page>
+  <iron-component-page></iron-component-page>
 
 </body>
 </html>
