--- a/paper-fab-menu-item.html
+++ b/paper-fab-menu-item.html
@@ -9,7 +9,7 @@
 -->
 
 <link rel="import" href="../iron-icons/iron-icons.html">
-<link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<!-- <link rel="import" href="../paper-tooltip/paper-tooltip.html"> -->
 <link rel="import" href="../paper-fab/paper-fab.html">
 
 <!--
