--- a/demo.html
+++ b/demo.html
@@ -41,7 +41,7 @@
   <paper-fab-menu icon="menu" closeIcon="close" duration="0.3">
     <paper-fab-menu-item icon="info-outline" color="blue;" tooltip="Information"></paper-fab-menu-item>
     <paper-fab-menu-item icon="alarm" color="purple;" tooltip="Alarm"></paper-fab-menu-item>
-    <paper-fab-menu-item icon="star-outline" color="green;" tooltip="Favorites"></paper-fab-menu-item>
+    <paper-fab-menu-item icon="star-border" color="green;" tooltip="Favorites"></paper-fab-menu-item>
     <paper-fab-menu-item icon="list" color="orange;" tooltip="List"></paper-fab-menu-item>
   </paper-fab-menu>
 
