--- a/test/paper-fab-menu-basic.html
+++ b/test/paper-fab-menu-basic.html
@@ -16,6 +16,8 @@
   <paper-fab-menu id="fixture"></paper-fab-menu>
 
   <script>
+    'use strict';
+
     var myEl = document.getElementById('fixture');
 
     suite('<paper-fab-menu>', function() {
