--- a/paper-fab-menu-overlay.html
+++ b/paper-fab-menu-overlay.html
@@ -14,7 +14,9 @@
         z-index: 10;
       }*/
     </style>
-    <content></content>
+    <div>
+      <content></content>
+    </div>
   </template>
 
 </dom-module>
